# local-industry

./: .clangd  CMakeLists.txt  CMakePresets.json  compile_commands.json
game/: CMakeLists.txt  game.cpp  game.h  main.cpp
game/src/game/: game.cpp  game.h  game_conpars_init.cpp  game_conpars_init.h  game_systems.cpp  game_systems.h  graphics.cpp  graphics.h  main.cpp
game/src/game/agriculture/: CMakeLists.txt  agriculture_system.cpp  agriculture_system.h  components.h  tree_system.cpp  tree_system.h
game/src/game/camera/: camera_controller.h  orbital_camera_controller.cpp  orbital_camera_controller.h
game/src/game/character/: CMakeLists.txt  character.ixx  character_control_system.cpp  character_control_system.h  character_system.cpp  character_system.h  character_system.ixx  character_task_system.cpp  character_task_system.h  character_task_system.ixx  components.h  components.ixx  task_queue.cpp  task_queue.h  task_queue.ixx
game/src/game/control/: CMakeLists.txt  action_bind.cpp  action_bind.h  action_control.cpp  action_control.h  action_init.cpp  action_init.h  agriculture_control_system.cpp  agriculture_control_system.h  character_control_system.cpp  character_control_system.h  components.h  control_system.cpp  control_system.h  deposit_control_system.cpp  deposit_control_system.h  machine_control_system.cpp  machine_control_system.h  mouse_raycast.h  mouse_raycast_observer.h  mouse_raycast_system.cpp  mouse_raycast_system.h  movement_controller.h  selection_system.cpp  selection_system.h  trade_control_system.cpp  trade_control_system.h
game/src/game/economy/: CMakeLists.txt  components.h  internal_components.h  trade_system.cpp  trade_system.h
game/src/game/gui/: CMakeLists.txt  gui.cpp  gui.h  window_widget.cpp  window_widget.h
game/src/game/inventory/: CMakeLists.txt  components.h  inventory_system.cpp  inventory_system.h
game/src/game/item/: components.h  items.h
game/src/game/machine/: CMakeLists.txt  base_machine_system.h  components.h  connection_system.cpp  connection_system.h  machine_connector.cpp  machine_connector.h  machine_control_system.cpp  machine_control_system.h  machine_loader.cpp  machine_loader.h  machine_loading_system.cpp  machine_system.cpp  machine_system.h  machine_type.cpp  machine_type.h
game/src/game/resource/: CMakeLists.txt  components.h  deposit_extraction_system.cpp  deposit_extraction_system.h  deposit_system.cpp  deposit_system.h  deposit_task_system.cpp  deposit_task_system.h  exceptions.h  internal_components.h
game/src/game/util/: CMakeLists.txt  enum_iterator.h
game/test/: CMakeLists.txt
game/test/game/: CMakeLists.txt  main.h
game/test/game/inventory/: CMakeLists.txt  inventory_system_tests.cpp  inventory_system_tests.h
lc_client/: CMakeLists.txt
lc_client/include/lc_client/: i_game_logic.h
lc_client/include/lc_client/eng_graphics/: i_window.h
lc_client/include/ldk_client/local_engine/: CMakeLists.txt  scene_controlling.h  time.h
lc_client/src/: loop.cpp
lc_client/src/eng_graphics/openGL/: gl_window.cpp
lc_client/src/eng_input/: glfw_input.cpp  glfw_input.h
lc_client/src/exceptions/: glad_exceptions.h  glfw_exceptions.h
lc_client/src/lc_client/: i_game_logic.h  loop.cpp  loop.h  systems.cpp  systems.h
lc_client/src/lc_client/eng_cubemaps/: CMakeLists.txt  cubemap_loader.h  cubemap_system.cpp  cubemap_system.h  cubemap_texture_loader.cpp  cubemap_texture_loader.h  cubemap_work.h
lc_client/src/lc_client/eng_entties/: CMakeLists.txt
lc_client/src/lc_client/eng_graphics/: CMakeLists.txt  graphics_settings.cpp  graphics_settings.h  i_render.h  i_window.h  mesh_work.h  shader_manager.h  shader_system.cpp  shader_system.h  shader_work.h  skybox_render.h  texture.h  texture_manager.cpp  texture_manager.h
lc_client/src/lc_client/eng_gui/: CMakeLists.txt  gui.h  gui_console.cpp  gui_console.h  includes.h  pointer_over_gui.h  pointer_over_gui_impl.cpp  pointer_over_gui_impl.h  popup_controller.h  popup_controller_impl.cpp  popup_controller_impl.h
lc_client/src/lc_client/eng_input/: CMakeLists.txt  glfw_input.cpp  glfw_input.h  glfw_input_raw.cpp  glfw_input_raw.h  i_input.h  i_input_raw.h  input.h  key_code.h  key_code_strings.cpp
lc_client/src/lc_client/eng_lighting/: CMakeLists.txt
lc_client/src/lc_client/eng_map/: CMakeLists.txt  map.cpp
lc_client/src/lc_client/eng_model/: CMakeLists.txt  material_system.cpp  material_system.h  model_loading.cpp  model_loading.h  model_manager.cpp  model_manager.h  model_system.cpp  model_system.h
lc_client/src/lc_client/eng_npc/: CMakeLists.txt  components.h  npc_graph.cpp  npc_graph.h  npc_graph_.cpp  npc_graph_visualizer.cpp  npc_system.cpp  npc_system.h
lc_client/src/lc_client/eng_physics/: CMakeLists.txt  collider_system.cpp  collider_system.h  physics.h  physics_loader.cpp  physics_system.cpp  physics_system.h  physics_visualizer.cpp  physics_visualizer.h
lc_client/src/lc_client/eng_procedures/: CMakeLists.txt  graphics_entities_loading.cpp  graphics_entities_loading.h  i_graphics_entities_loading.h  i_shaders.h  shaders.cpp  shaders.h  texture_manager.cpp
lc_client/src/lc_client/eng_scene/: CMakeLists.txt  component_creator.cpp  component_creator.h  scene.cpp  scene.h  scene_loading.cpp  scene_loading.h  skybox.cpp  skybox.h  skybox_system.cpp  skybox_system.h
lc_client/src/lc_client/eng_script/: CMakeLists.txt  script_system.cpp  script_system.h
lc_client/src/lc_client/eng_systems/: graphics_systems.cpp  graphics_systems.h
lc_client/src/lc_client/eng_world/: world.cpp  world.h
lc_client/src/lc_client/exceptions/: CMakeLists.txt  command_exceptions.h  conpar_exceptions.h  input_exceptions.h  io_exceptions.h
lc_client/src/lc_client/local_engine/: CMakeLists.txt  scene_controlling.cpp  time.cpp
lc_client/src/lc_client/tier0/: CMakeLists.txt  imgui_fonts.h  tier0.cpp  tier0.h
lc_client/src/lc_client/tier0_/: CMakeLists.txt
lc_client/src/lc_client/tier1/: CMakeLists.txt  config.cpp  config.h  game_info.cpp  game_info.h  tier1.cpp  tier1.h
lc_client/src/lc_client/util/: image.h  (+22 more)
lc_client/test/lc_client/: CMakeLists.txt
(+337 files in other folders)
